Fix TwitterAPI